--- a/week1-2.html
+++ b/week1-2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>week1</title>
-    <script src="week1.js"></script>
+    <script src="week1-2.js"></script>
 </head>
 
 <body>
